--- a/Shih_NoorSyafira_L01.qmd
+++ b/Shih_NoorSyafira_L01.qmd
@@ -1,7 +1,7 @@
 ---
 title: "L01 Visualization"
 subtitle: "Foundations of Data Science with R (STAT 359)"
-author: "YOUR NAME"
+author: "Noor Syafira Shih"
 format:
   html:
     toc: true
@@ -18,9 +18,7 @@ from: markdown+emoji
 
 ## Github Repo Link
 
-To link to your github **repo**sitory, appropriately edit the example link below. Meaning replace `https://your-github-repo-url` with your github repo url. Suggest verifying the link works before submitting.
-
-[https://your-github-repo-url](https://your-github-repo-url)
+[https://github.com/STAT359-2024SU/l01-visualization-seasp](https://github.com/STAT359-2024SU/l01-visualization-seasp)
 
 :::
 
@@ -40,7 +38,7 @@ You should always begin by loading all necessary packages towards the beginning 
 #| label: load-pkgs
 
 # Loading package(s)
-
+library(tidyverse)
 ```
 
 
